--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,17 +1,15 @@
 plugins {
     id 'com.android.library'
-    id 'com.github.dcendents.android-maven'
 }
 
 group='com.github.bright'
 
 android {
-    compileSdkVersion 28
-    buildToolsVersion '28.0.3'
+    compileSdkVersion 33
 
     defaultConfig {
-        minSdkVersion 14
-        targetSdkVersion 28
+        minSdkVersion 21
+        targetSdkVersion 33
         versionCode 14
         versionName "1.0"
     }
@@ -28,21 +26,21 @@ android {
 }
 
 dependencies {
-    implementation 'com.android.support:support-compat:28.0.0'
-    implementation 'org.slf4j:slf4j-api:1.7.7'
+    implementation 'androidx.core:core:1.9.0'
+    implementation 'org.slf4j:slf4j-api:1.7.36'
     implementation 'com.squareup:seismic:1.0.2'
     androidTestImplementation 'org.hamcrest:hamcrest-all:1.3'
-    androidTestImplementation('junit:junit:4.11') {
+    androidTestImplementation('junit:junit:4.13.2') {
         exclude module: 'hamcrest-core'
     }
     androidTestImplementation 'org.easytesting:fest-util:1.2.5'
 
     testImplementation 'org.hamcrest:hamcrest-all:1.3'
-    testImplementation('junit:junit:4.11') {
+    testImplementation('junit:junit:4.13.2') {
         exclude module: 'hamcrest-core'
     }
     testImplementation 'org.easytesting:fest-util:1.2.5'
-    testImplementation('org.robolectric:robolectric:3.0') {
+    testImplementation('org.robolectric:robolectric:4.5.1') {
         exclude module: 'classworlds'
         exclude module: 'commons-logging'
         exclude module: 'httpclient'
